cosmetic layout issues

--- a/tt-rss.css
+++ b/tt-rss.css
@@ -239,7 +239,6 @@ table.prefFeedList tr.title td, table.prefFilterList tr.title td,
 }
 
 .disabledButton {
-	font-family : tahoma, sans-serif;
 	border : 1px solid #d0d0d0;
 	background : white;
 	color : #909090;	
@@ -254,14 +253,12 @@ table.prefFeedList tr.title td, table.prefFilterList tr.title td,
 }
 
 .button {
-	font-family : tahoma, sans-serif;
 	border : 1px solid #d0d0d0;
 	background-image : url("images/button.png");
 	background-position : top;
 	background-repeat : repeat-x;
 	background-color : white;
 	color : black;	
-	padding : 1px 5px 1px 5px;
 }
 
 /* .button:hover {
@@ -276,7 +273,6 @@ a.button {
 
 
 .buttonWarn {
-	font-family : tahoma, sans-serif;
 	border : 1px solid #d0d0d0;
 	background-image : url("images/button.png");
 	background-position : top;
